[package]
name = "ssh-transfer"
version = "0.1.0"
edition = "2021"
authors = ["李东键 <2300013167@stu.pku.edu.cn>，温锦程 <2300013187@stu.pku.edu.cn>，羊瑞 <2300013091@stu.pku.edu.cn>"]
description = "A multi-threaded SSH file transfer tool with resume capability"

[[bin]]
name = "ssh-transfer"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
ssh2 = "0.9"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
indicatif = "0.17"
console = "0.15"
log = "0.4"
env_logger = "0.10"
crossbeam-channel = "0.5"
rayon = "1.7"
walkdir = "2.3"
md5 = "0.7"
hex = "0.4"
home = "0.5"
rpassword = "7.0"  
dialoguer = "0.11" 